--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .fst-half {
@@ -39,4 +40,20 @@ section {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 
+}
+
+.nd-button {
+    text-decoration: none;
+    background-color: rgb(255, 17, 0);
+    padding: 10px 40px;
+    color: aliceblue;
+    font-weight: 400;
+    border-radius: 5px;
+
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
