--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
 
 }
 
-section {
+.fexi {
     display: flex;
     margin-bottom: 150px;
 }
@@ -56,4 +56,34 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+
+}
+
+.komola-color {
+    color: orange;
+}
+
+.ex-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    padding-left: 20px;
+    box-shadow: 10px 10px 10px gray;
+    border-left: 7px solid blue;
+
+}
+
+.exper {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#red-color {
+    border-left: 7px solid orangered;
+}
+
+footer p {
+    text-align: center;
 }
